--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel's Website</title>
+    <title>Daniel's CSC 106 Website</title>
 </head>
 <body>
+    <img src="csc106_banner.jpg"
     <h1>Hello World!</h1>
     <h1>Welcome to my website!</h1>
     <h1>Thanks for visiting my website! To learn more about me <a href="aboutme.html">Click here</a>
