--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <img src="csc106_banner.jpg"
-    <h1>Hello World!</h1>
-    <h1>Welcome to my website!</h1>
+   
+    <h1><center>Welcome To My Website</center></h1>
     <h1>Thanks for visiting my website! To learn more about me <a href="aboutme.html">Click here</a>
 </body>
 </html>
