--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Daniel's CSC 106 Website</title>
 </head>
 <body>
-    <img src="csc106_banner.jpg"
-   
-    <h1><center>Welcome To My Website</center></h1>
-    <h1>Thanks for visiting my website! To learn more about me <a href="aboutme.html">Click here</a>
+    <img src="csc106_banner.jpg" 
+    <br>
+    <br>
+    <img src="home.png"> <img src="js.png" 
+    <br>
+    <h2>Welcome To My Website <a href="aboutme.html">Click here</a>
 </body>
 </html>
