--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <img src="csc106_banner.jpg" 
     <br>
     <br>
-    <img src="home.png"> <img src="js.png"> <img src="aboutme.png" 
+    <img src="home.png"> <img src="js.png"> <img src="aboutme.png">
     <br>
     <h1>Welcome To My Website!</h1>
     <h2>My name is Daniel Lurye </h2>
     <br>
     <br>
-    <h3> In my free time I like to play videogmaes and read comic books. One of my favorite sports is Sailing because it is very active and i like the rushof adrenaline I get from sailing on a lake.</h3>
+    <h3> In my free time I like to play videogmaes and read comic books. 
+        One of my favorite sports is Sailing because it is very active and i like the rushof adrenaline 
+        I get from sailing on a lake.</h3>
     <br>
     <br>
     <img src="img04.jpg"
