--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <h2>My name is Daniel Lurye </h2>
     <br>
     <br>
-    <h3> In my free time I like to play videogmaes 
+    <h3> In my free time I like to play videogames 
         and read comic books. 
         One of my favorite sports is Sailing 
         because it is very active 
-        and i like the rushof adrenaline 
+        and i like the rush of adrenaline 
         I get from sailing on a lake.</h3>
     <br>
     <br>
