--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,8 @@
     <title>About Daniel</title>
 </head>
 <body>
-    <h1>About Daniel</h1>
+    <img src="csc106_banner.jpg"
+    <br>
+    <a href="index.html"><img src="home.png"> <a href="javascript.html"><img src="js.png"></a> <img src="aboutme.png">
 </body>
 </html>
