--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img src="csc106_banner.jpg" 
     <br>
     <br>
-    <img src="home.png"> <a href="javascript.html"><img src="js.png" alt=""></a> <a href="aboutme.html"><img src="aboutme.png" alt=""></a> 
+    <img src="home.png"> <a href="javascript.html"><img src="js.png"></a> <a href="aboutme.html"><img src="aboutme.png"></a> 
     <br>
     <h1>Welcome To My Website!</h1>
     <h2>My name is Daniel Lurye </h2>
