--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,20 @@
 <body>
     <img src="csc106_banner.jpg"
     <br>
-    <a href="index.html"><img src="home.png"> <a href="javascript.html"><img src="js.png"></a> <img src="aboutme.png">
+    <br>
+    <a href="index.html"><img src="home.png"></a> <a href="javascript.html"><img src="js.png"></a> <img src="aboutme.png">
+    <h1> This is my About Me page </h1>
+    <br>
+    <br>
+    <h2>In my free time I like to play videogames 
+        and read comic books. 
+        One of my favorite sports is Sailing 
+        because it is very active 
+        and i like the rush of adrenaline 
+        I get from sailing on a lake. </h2>
+    <br>
+    <br>
+    <img src=""
+
 </body>
 </html>
