--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
     <h2>My name is Daniel Lurye </h2>
     <br>
     <br>
-    <h3> In my free time I like to play videogames 
-        and read comic books. 
-        One of my favorite sports is Sailing 
-        because it is very active 
-        and i like the rush of adrenaline 
-        I get from sailing on a lake.</h3>
+    <h3><p>This is a website I made for CSC 106 at the University of Rhode Island.</p></h3>
     <br>
     <br>
     <img src="img04.jpg"
