--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <h2>My name is Daniel Lurye </h2>
     <br>
     <br>
-    <p>This is a website I made for CSC 106 at the University of Rhode Island. 
-        It took me awhile to made this website and I had some help from the professors and the teachers assistants.
-        I was honestly surpriced how much I could by myslef.</p>
+    <p>This is a website I made for CSC 106 at the University of Rhode Island.</p>
     <br>
     <br>
     <img src="img04.jpg"
