--- a/aboutme.html
+++ b/aboutme.html
@@ -13,15 +13,14 @@
     <h1> This is my About Me page </h1>
     <br>
     <br>
-    <h2>In my free time I like to play videogames 
+    <p>In my free time I like to play videogames 
         and read comic books. 
         One of my favorite sports is Sailing 
         because it is very active 
         and i like the rush of adrenaline 
-        I get from sailing on a lake. </h2>
-    <br>
-    <br>
-    <img src="download.jpg"
-
+        I get from sailing on a lake. </p>
+ <br>
+ <br>
+<img src="download.jpg"> <img src="sailing.jpg"
 </body>
 </html>
