--- a/aboutme.html
+++ b/aboutme.html
@@ -14,11 +14,11 @@
     <br>
     <br>
     <p>In my free time I like to play videogames 
-        and read comic books. 
-        One of my favorite sports is Sailing 
-        because it is very active 
-        and i like the rush of adrenaline 
-        I get from sailing on a lake. </p>
+    <br>    and read comic books. 
+    <br>    One of my favorite sports is Sailing 
+    <br>    because it is very active 
+    <br>    and i like the rush of adrenaline 
+    <br>    I get from sailing on a lake. </p>
  <br>
  <br>
 <img src="download.jpg"> <img src="sailing.jpg"
