--- a/aboutme.html
+++ b/aboutme.html
@@ -18,11 +18,11 @@
     <br>    One of my favorite sports is Sailing 
     <br>    because it is very active 
     <br>    and i like the rush of adrenaline 
-    <br>    I get from sailing on a lake. When I get extremely bored I end up either watch something on youtube or read comic books that I like. </p>
+    <br>    I get from sailing on a lake. When I get extremely bored
+    <br>    I end up either watch something on youtube or read comic books that I like. </p>
  <br>
  <br>
 <img src="download.jpg"> 
-<br>
 <br>
 <img src="sailing.jpg"
 </body>
