--- a/aboutme.html
+++ b/aboutme.html
@@ -22,8 +22,6 @@
     <br>    I end up either watch something on youtube or read comic books that I like. </p>
  <br>
  <br>
-<img src="download.jpg"> 
-<br>
-<img src="sailing.jpg"
+<img src="download.jpg"> <img src="sailing.jpg" width="315"
 </body>
 </html>
