--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Daniel's CSC 106 Website</title>
 </head>
 <body>
-    <img src="csc106_banner.jpg" 
+    <img src="csc106_banner.jpg" alt="CSC106 The Joy of Programming class"
     <br>
     <br>
     <img src="home.png"> <a href="javascript.html"><img src="js.png"></a> <a href="aboutme.html"><img src="aboutme.png"></a> 
@@ -18,6 +18,6 @@
     <p>This is a website I made for CSC 106 at the University of Rhode Island.</p>
     <br>
     <br>
-    <img src="img04.jpg"
+    <img src="img04.jpg" alt="Image of sailing boats on a lake"
 </body>
 </html>
