--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <p>This is a website I made for CSC 106 at the University of Rhode Island.</p>
     <br>
     <br>
-    <img src="img04.jpg" alt="Image of sailing boats on a lake"
+    <img src="img04.jpg" width="500" alt="Image of sailing boats on a lake"
 </body>
 </html>
