--- a/aboutme.html
+++ b/aboutme.html
@@ -22,6 +22,6 @@
     <br>    I end up either watch something on youtube or read comic books that I like. </p>
  <br>
  <br>
-<img src="download.jpg"> <img src="sailing.jpg" width="315"
+<img src="download.jpg" width="378"> <img src="sailing.jpg" width="315"
 </body>
 </html>
