--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <h2>My name is Daniel Lurye </h2>
     <br>
     <br>
-    <p>This is a website I made for CSC 106 at the University of Rhode Island.</p>
+    <p>This is a website I made for CSC 106 at the University of Rhode Island. 
+    <br>This was designed for me to express  myself and I put alot of effort into
+    <br>this website. I honestly thought that I would give up early on but I decided
+    <br>to be persistent.
+    </p>
     <br>
     <br>
     <img src="img04.jpg" width="500" alt="Image of sailing boats on a lake"
