--- a/javascript.html
+++ b/javascript.html
@@ -9,7 +9,11 @@
     <img src="csc106_banner.jpg" 
     <br>
     <br>
-    <a href="index.html"><img src="home.png"></a> <img src="js.png"> <a href="aboutme.html"><img src="aboutme.png"></a>
+    <table>
+        <td><a href="index.html"><img src="home.png"></a></td>
+        <td><img src="js.png"></td>
+        <td><a href="aboutme.html"><img src="aboutme.png"></a></td>
+    </table>
     <br>
 </body>
 </html>
