--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,11 @@
     <img src="csc106_banner.jpg"
     <br>
     <br>
-    <a href="index.html"><img src="home.png"></a> <a href="javascript.html"><img src="js.png"></a> <img src="aboutme.png">
+    <table>
+        <td><a href="index.html"><img src="home.png"></a></td>
+        <td><a href="javascript.html"><img src="js.png"></a></td>
+        <td><img src="aboutme.png"></td>
+    </table>
     <h1> This is my About Me page </h1>
     <br>
     <br>
