--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <img src="csc106_banner.jpg" alt="CSC106 The Joy of Programming class"
     <br>
     <br>
-    <img src="home.png"> <a href="javascript.html"><img src="js.png"></a> <a href="aboutme.html"><img src="aboutme.png"></a> 
+    <table>
+        <td><img src="home.png"></td>
+        <td><a href="javascript.html"><img src="js.png"></a></td>
+        <td><a href="aboutme.html"><img src="aboutme.png"></a></td>
+    </table> 
     <br>
     <h1>Welcome To My Website!</h1>
     <h2>My name is Daniel Lurye </h2>
