--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Daniel</title>
+    <style>
+        h2 {
+            color:tomato
+        }
+        h1 {
+            color:firebrick
+        }
+        body{
+            background-color:dimgray
+        }
+        </style>
 </head>
 <body>
     <img src="csc106_banner.jpg"
