--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel's CSC 106 Website</title>
+    <style>
+    h2 {
+        color:tomato
+    }
+    h1 {
+        color:firebrick
+    }
+    body{
+        background-color:dimgray
+    }
+    #Home-description {
+        background-color:darkolivegreen
+    }
+    #Welcome {
+        background-color:black
+    }
+    #My-name {
+        background-color:indigo
+    }
+    </style>
 </head>
 <body>
     <img src="csc106_banner.jpg" alt="CSC106 The Joy of Programming class"
@@ -15,10 +35,10 @@
         <td><a href="aboutme.html"><img src="aboutme.png"></a></td>
     </table> 
     <br>
-    <h1>Welcome To My Website!</h1>
-    <h2>My name is Daniel Lurye </h2>
+    <h1 id="Welcome">Welcome To My Website!</h1>
+    <h2 id="My-name">My name is Daniel Lurye </h2>
     <br>
-    <p>This is a website I made for CSC 106 at the University of Rhode Island. 
+    <p id="Home-description">This is a website I made for CSC 106 at the University of Rhode Island. 
     <br>This was designed for me to express  myself and I put alot of effort into
     <br>this website. I honestly thought that I would give up early on but I decided
     <br>to be persistent.
