--- a/javascript.html
+++ b/javascript.html
@@ -23,7 +23,7 @@
     <table>
         <td><a href="index.html"><img src="home.png"></a></td>
         <td><img src="js.png"></td>
-        <td><a href="aboutme.html"><img src="aboutme.png"></a></td>
+        <td><a href="aboutme.html"><img src="aboutme.jpg"></a></td>
     </table>
     <br>
 </body>
