--- a/aboutme.html
+++ b/aboutme.html
@@ -21,9 +21,9 @@
     <br>
     <br>
     <table>
-        <td><a href="index.html"><img src="home.png"></a></td>
+        <td><a href="index.html"><img src="home.jpg"></a></td>
         <td><a href="javascript.html"><img src="js.png"></a></td>
-        <td><img src="aboutme.png"></td>
+        <td><img src="aboutme.jpg"></td>
     </table>
     <h1> This is my About Me page </h1>
     <br>
