--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <br>
     <br>
     <table>
-        <td><img src="home.png"></td>
+        <td><img src="home.jpg"></td>
         <td><a href="javascript.html"><img src="js.png"></a></td>
-        <td><a href="aboutme.html"><img src="aboutme.png"></a></td>
+        <td><a href="aboutme.html"><img src="aboutme.jpg"></a></td>
     </table> 
     <br>
     <h1 id="Welcome">Welcome To My Website!</h1>
