--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     #Welcome {
         background-color:black
     }
+    #welcome {
+        width: 300 px;
+    }
     #My-name {
         background-color:indigo
     }
