--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@
     <br>
     <table>
         <td><a href="index.html"><img src="home.jpg"></a></td>
-        <td><a href="javascript.html"><img src="js.png"></a></td>
+        <td><a href="javascript.html"><img src="js.jpg"></a></td>
         <td><img src="aboutme.jpg"></td>
     </table>
     <h1> This is my About Me page </h1>
