--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
     #Welcome {
         background-color:black
     }
-    #welcome {
-        width: 300 px;
-    }
     #My-name {
         background-color:indigo
     }
@@ -34,7 +31,7 @@
     <br>
     <table>
         <td><img src="home.jpg"></td>
-        <td><a href="javascript.html"><img src="js.png"></a></td>
+        <td><a href="javascript.html"><img src="js.jpg"></a></td>
         <td><a href="aboutme.html"><img src="aboutme.jpg"></a></td>
     </table> 
     <br>
