--- a/javascript.html
+++ b/javascript.html
@@ -21,8 +21,8 @@
     <br>
     <br>
     <table>
-        <td><a href="index.html"><img src="home.png"></a></td>
-        <td><img src="js.png"></td>
+        <td><a href="index.html"><img src="home.jpg"></a></td>
+        <td><img src="js.jpg"></td>
         <td><a href="aboutme.html"><img src="aboutme.jpg"></a></td>
     </table>
     <br>
