--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,8 @@
             color:firebrick
         }
         body{
-            background-color:dimgray
+            background-image: url(backround_image.png);
+            color:crimson;
         }
         </style>
 </head>
