--- a/javascript.html
+++ b/javascript.html
@@ -12,7 +12,7 @@
             color:firebrick
         }
         body{
-            background-color:dimgray
+            background-image: url(backround_image.png);
         }
         </style>
 </head>
