--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
         </style>
 </head>
 <body>
-    <img src="csc106_banner.jpg"
+    <img src="my banner.jpg" width="600"
     <br>
     <br>
     <table>
