--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <img src="csc106_banner.jpg" alt="CSC106 The Joy of Programming class"
+    <img src="my banner.jpg" width="600"
     <br>
     <br>
     <table>
@@ -34,7 +34,6 @@
         <td><a href="javascript.html"><img src="js.jpg"></a></td>
         <td><a href="aboutme.html"><img src="aboutme.jpg"></a></td>
     </table> 
-    <br>
     <h1 id="Welcome">Welcome To My Website!</h1>
     <h2 id="My-name">My name is Daniel Lurye </h2>
     <br>
@@ -44,6 +43,6 @@
     <br>to be persistent.
     </p>
     <br>
-    <img src="img04.jpg" width="500" alt="Image of sailing boats on a lake"
+    <img src="img04.jpg" width="450" alt="Image of sailing boats on a lake"
 </body>
 </html>
