--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <img src="my banner.jpg" 
+    <img src="my banner.jpg" width="600"
     <br>
     <br>
     <table>
