--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <img src="my banner.jpg" width="600"
+    <img src="my banner.jpg" height="275"
     <br>
     <br>
     <table>
@@ -43,6 +43,6 @@
     <br>to be persistent.
     </p>
     <br>
-    <img src="img04.jpg" width="450" alt="Image of sailing boats on a lake"
+    <img src="img04.jpg" width="400" alt="Image of sailing boats on a lake"
 </body>
 </html>
