--- a/javascript.html
+++ b/javascript.html
@@ -17,7 +17,7 @@
         </style>
 </head>
 <body>
-    <img src="csc106_banner.jpg" 
+    <img src="my banner.jpg" height="275" 
     <br>
     <br>
     <table>
