--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <p id="Home-description">This is a website I made for CSC 106 at the University of Rhode Island. 
     <br>This was designed for me to express  myself and I put alot of effort into
     <br>this website. I honestly thought that I would give up early on but I decided
-    <br>to be persistent.
+    <br>to be persistent. The two buttons will bring you to a secondary page where you get to see
+    <br> my javascript programs or you see things about me.
     </p>
-    <br>
-    <img src="img04.jpg" width="400" alt="Image of sailing boats on a lake"
+    <img src="img04.jpg" width="375" alt="Image of sailing boats on a lake"
 </body>
 </html>
