--- a/aboutme.html
+++ b/aboutme.html
@@ -15,6 +15,12 @@
             background-image: url(backround_image.png);
             color:crimson;
         }
+        #paragraph{
+            background-color:rgba(15, 30, 237, 0.338)
+        }
+        #About-me{
+            background-color: rgba(80, 179, 255, 0.409);
+        }
         </style>
 </head>
 <body>
@@ -26,10 +32,10 @@
         <td><a href="javascript.html"><img src="js.jpg"></a></td>
         <td><img src="aboutme.jpg"></td>
     </table>
-    <h1> This is my About Me page </h1>
+    <h1 id="About-me"> This is my About Me page </h1>
     <br>
     <br>
-    <p>In my free time I like to play videogames 
+    <p id="paragraph">In my free time I like to play videogames 
     <br>    and read comic books. 
     <br>    One of my favorite sports is Sailing 
     <br>    because it is very active 
