--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
         background-image: url(backround_image.png);
     }
     #Home-description {
-        background-color:darkolivegreen
+        background-color:darkolivegreen;
+        width:fit-content
     }
     #Welcome {
-        background-color:black
+        background-color:black;
+        width:fit-content
     }
     #My-name {
-        background-color:indigo
+        background-color:indigo;
+        width:fit-content
     }
     </style>
 </head>
