--- a/aboutme.html
+++ b/aboutme.html
@@ -16,10 +16,12 @@
             color:crimson;
         }
         #paragraph{
-            background-color:rgba(15, 30, 237, 0.338)
+            background-color:rgba(15, 30, 237, 0.338);
+            width:fit-content
         }
         #About-me{
             background-color: rgba(80, 179, 255, 0.409);
+            width:fit-content
         }
         </style>
 </head>
