--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <td><a href="aboutme.html"><img src="aboutme.jpg"></a></td>
     </table> 
     <h1 id="Welcome">Welcome To My Website!</h1>
-    <h2 id="My-name">My name is Daniel Lurye </h2>
+    <h2 id="My-name">I am a computer science major </h2>
     <br>
     <p id="Home-description">This is a website I made for CSC 106 at the University of Rhode Island. 
     <br>This was designed for me to express  myself and I put alot of effort into
