--- a/aboutme.html
+++ b/aboutme.html
@@ -33,6 +33,7 @@
         <td><a href="index.html"><img src="home.jpg"></a></td>
         <td><a href="javascript.html"><img src="js.jpg"></a></td>
         <td><img src="aboutme.jpg"></td>
+        <td><a href="other.html"><img src="other.jpg"></a></td>
     </table>
     <h1 id="About-me"> This is my About Me page </h1>
     <br>
