--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
         <td><img src="home.jpg"></td>
         <td><a href="javascript.html"><img src="js.jpg"></a></td>
         <td><a href="aboutme.html"><img src="aboutme.jpg"></a></td>
+        <td><a href="other.html"><img src="other.jpg"></a></td>
     </table> 
     <h1 id="Welcome">Welcome To My Website!</h1>
-    <h2 id="My-name">I am a computer science major </h2>
+    <h2 id="My-name">I am a computer science major</h2>
     <br>
     <p id="Home-description">This is a website I made for CSC 106 at the University of Rhode Island. 
     <br>This was designed for me to express  myself and I put alot of effort into
