--- a/other.html
+++ b/other.html
@@ -22,9 +22,9 @@
     <br>
     <table>
         <td><a href="index.html"><img src="home.jpg"></a></td>
-        <td><img src="js.jpg"></td>
+        <td><a href="javascript.html"><img src="js.jpg"></a></td>
         <td><a href="aboutme.html"><img src="aboutme.jpg"></a></td>
-        <td><a href="other.html"><img src="other.jpg"></a></td>
+        <td><img src="other.jpg"></td>
     </table>
     <br>
 </body>
