--- a/other.html
+++ b/other.html
@@ -14,6 +14,10 @@
         body{
             background-image: url(backround_image.png);
         }
+        #other {
+            background-color: dimgray;
+            width: fit-content;
+        }
         </style>
 </head>
 <body>
@@ -28,4 +32,10 @@
     </table>
     <br>
 </body>
+<h1>Welcome to my Others page!</h1>
+<p id="other">
+    This is where I put my creations that I either created in my free time
+    <br> or i created them in classes.There is a varity of codes used from html
+    <br> to videogames created using all that I have learned in class.
+</p>
 </html>
