--- a/aboutme.html
+++ b/aboutme.html
@@ -5,22 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Daniel</title>
     <style>
-        h2 {
-            color:tomato
-        }
         h1 {
-            color:firebrick
+            color:yellow
         }
         body{
             background-image: url(backround_image.png);
             color:crimson;
         }
         #paragraph{
-            background-color:rgba(15, 30, 237, 0.338);
+            background-color:rgba(15, 237, 211, 0.514);
             width:fit-content
         }
         #About-me{
-            background-color: rgba(80, 179, 255, 0.409);
+            background-color: rgba(80, 179, 255, 0.614);
             width:fit-content
         }
         </style>
@@ -36,7 +33,6 @@
         <td><a href="other.html"><img src="other.jpg"></a></td>
     </table>
     <h1 id="About-me"> This is my About Me page </h1>
-    <br>
     <br>
     <p id="paragraph">In my free time I like to play videogames 
     <br>    and read comic books. 
