--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel's CSC 106 Website</title>
     <style>
-    h2 {
-        color:tomato
-    }
     h1 {
         color:firebrick
     }
@@ -23,7 +20,7 @@
         width:fit-content
     }
     #My-name {
-        background-color:indigo;
+        background-color:darkolivegreen;
         width:fit-content
     }
     </style>
