--- a/aboutme.html
+++ b/aboutme.html
@@ -10,14 +10,14 @@
         }
         body{
             background-image: url(backround_image.png);
-            color:crimson;
+            color:white;
         }
         #paragraph{
-            background-color:rgba(15, 144, 237, 0.155);
+            background-color:rgba(0, 126, 252, 0.194);
             width:fit-content
         }
         #About-me{
-            background-color: rgba(80, 179, 255, 0.614);
+            background-color: rgba(0, 145, 255, 0.356);
             width:fit-content
         }
         </style>
