--- a/other.html
+++ b/other.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel's javascript</title>
+    <title>Daniel's Other page</title>
     <style>
         h2 {
             color:tomato
