--- a/aboutme.html
+++ b/aboutme.html
@@ -1,26 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="Daniel-style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Daniel</title>
-    <style>
-        h1 {
-            color:yellow
-        }
-        body{
-            background-image: url(backround_image.png);
-            color:white;
-        }
-        #paragraph{
-            background-color:rgba(0, 126, 252, 0.194);
-            width:fit-content
-        }
-        #About-me{
-            background-color: rgba(0, 145, 255, 0.356);
-            width:fit-content
-        }
-        </style>
 </head>
 <body>
     <img src="my banner.jpg" height="275"
@@ -32,9 +16,9 @@
         <td><img src="aboutme.jpg"></td>
         <td><a href="other.html"><img src="other.jpg"></a></td>
     </table>
-    <h1 id="About-me"> This is my About Me page </h1>
+    <h1> This is my About Me page </h1>
     <br>
-    <p id="paragraph">In my free time I like to play videogames 
+    <p>In my free time I like to play videogames 
     <br>    and read comic books. 
     <br>    One of my favorite sports is Sailing 
     <br>    because it is very active 
