--- a/index.html
+++ b/index.html
@@ -1,29 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="Daniel-style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel's CSC 106 Website</title>
-    <style>
-    h1 {
-        color:firebrick
-    }
-    body{
-        background-image: url(backround_image.png);
-    }
-    #Home-description {
-        background-color:darkolivegreen;
-        width:fit-content
-    }
-    #Welcome {
-        background-color:black;
-        width:fit-content
-    }
-    #My-name {
-        background-color:darkolivegreen;
-        width:fit-content
-    }
-    </style>
 </head>
 <body>
     <img src="my banner.jpg" height="275"
@@ -35,10 +16,10 @@
         <td><a href="aboutme.html"><img src="aboutme.jpg"></a></td>
         <td><a href="other.html"><img src="other.jpg"></a></td>
     </table> 
-    <h1 id="Welcome">Welcome To My Website!</h1>
-    <h2 id="My-name">I am a computer science major</h2>
+    <h1>Welcome To My Website!</h1>
+    <h2>I am a computer science major</h2>
     <br>
-    <p id="Home-description">This is a website I made for CSC 106 at the University of Rhode Island. 
+    <p>This is a website I made for CSC 106 at the University of Rhode Island. 
     <br>This was designed for me to express  myself and I put alot of effort into
     <br>this website. I honestly thought that I would give up early on but I decided
     <br>to be persistent. The two buttons will bring you to a secondary page where you get to see
