--- a/javascript.html
+++ b/javascript.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="Daniel-style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel's javascript</title>
-    <style>
-        h2 {
-            color:tomato
-        }
-        h1 {
-            color:firebrick
-        }
-        body{
-            background-image: url(backround_image.png);
-        }
-        </style>
 </head>
 <body>
     <img src="my banner.jpg" height="275" 
