--- a/other.html
+++ b/other.html
@@ -1,24 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="Daniel-style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel's Other page</title>
-    <style>
-        h2 {
-            color:tomato
-        }
-        h1 {
-            color:firebrick
-        }
-        body{
-            background-image: url(backround_image.png);
-        }
-        #other {
-            background-color: dimgray;
-            width: fit-content;
-        }
-        </style>
 </head>
 <body>
     <img src="my banner.jpg" height="275" 
@@ -33,7 +19,7 @@
     <br>
 </body>
 <h1>Welcome to my Others page!</h1>
-<p id="other">
+<p>
     This is where I put my creations that I either created in my free time
     <br> or i created them in classes.There is a varity of codes used from html
     <br> to videogames created using all that I have learned in class.
