--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
     <br>    I get from sailing on a lake. When I get extremely bored
     <br>    I end up either watch something on youtube or read comic books that I like. </p>
  <br>
- <br>
-<img src="download.jpg" width="378"> <img src="sailing.jpg" width="315"
+ <img src="me-doing-math.jpeg" width="200"><img src="me-sitting.jpeg" width="200"
+<img src="download.jpg" width="250"> <img src="sailing.jpg" width="278">
 </body>
 </html>
