--- a/aboutme.html
+++ b/aboutme.html
@@ -19,12 +19,12 @@
     <h1> This is my About Me page </h1>
     <br>
     <p>In my free time I like to play videogames 
-    <br>    and read comic books. 
-    <br>    One of my favorite sports is Sailing 
-    <br>    because it is very active 
-    <br>    and i like the rush of adrenaline 
+    <br>    and read comic books. One of my favorite sports is Sailing   
+    <br>    because it is very active and i like the rush of adrenaline   
     <br>    I get from sailing on a lake. When I get extremely bored
-    <br>    I end up either watch something on youtube or read comic books that I like. </p>
+    <br>    I end up either watch something on youtube or read comic books that I like.
+    <br>    I feel like I wlll learn a lot from going to college and from CSC 106.
+</p>
  <br>
  <img src="me-doing-math.jpeg" width="200"><img src="me-playing-videogames.jpeg" width="200"
 <img src="download.jpg" width="250"> <img src="download.jpg" width="278">
