--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
     <br>    I feel like I wlll learn a lot from going to college and from CSC 106.
 </p>
  <br>
- <img src="me-doing-math.jpeg" width="200"><img src="me-playing-videogames.jpeg" width="200"
-<img src="download.jpg" width="250"> <img src="download.jpg" width="278">
+ <img src="me-doing-math.jpeg" width="200">
+<img src="download.jpg" width="250"> <img src="me-playing-videogames.jpeg" width="200"
 </body>
 </html>
