--- a/javascript.html
+++ b/javascript.html
@@ -17,8 +17,14 @@
         <td><a href="other.html"><img src="other.jpg"></a></td>
     </table>
     <h1>Welcome to My Javascript Page</h1>
+    <p>These three programs are all using javascript and they each do different thing. The first one is just
+     <br> showing my avatar using javascript, the second is a dancing avatar where the avatar appears somewhere
+     <br> elese one the white square, and the last is showing my avatar moving across the screen at a slow pace.</p>   
+    </p>
     <table>
         <td><iframe src="https://code-lab.app//program/cc3021c1-5b9f-4c92-8302-a99dcbc1047a/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe></td>
+        <td><iframe src="https://code-lab.app//program/e6420100-bf47-47f7-9a78-91eaa9b8b8a3/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe></td>
+        <td><iframe src="https://code-lab.app//program/b7d3859c-ab65-43c5-a922-0bd74bf7ba1d/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe></td>
     </table>
     <br>
 </body>
