--- a/javascript.html
+++ b/javascript.html
@@ -27,5 +27,11 @@
         <td><iframe src="https://code-lab.app//program/b7d3859c-ab65-43c5-a922-0bd74bf7ba1d/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe></td>
     </table>
     <br>
+    <br>
+    <table> 
+        <td><iframe src="https://code-lab.app/program/2fc410c6-d74c-462f-a21b-f0b191bf5459/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe></td>
+        <td><iframe src="https://code-lab.app/program/a17339ce-212f-424c-a882-873c5bd7a3d7/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe></td>
+        <td><iframe src="https://code-lab.app/program/ee912720-ece1-48d2-a268-0a579ffa1ff8/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe></td>
+    </table>
 </body>
 </html>
