--- a/javascript.html
+++ b/javascript.html
@@ -36,6 +36,8 @@
     <br>
     <table>
         <td><iframe src="https://code-lab.app/program/74a64d6e-9f83-4c76-bceb-48d8f1704162/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe></td>
+        <td><iframe src="https://code-lab.app/program/a9857321-24a8-4860-9806-874ded12593d/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe></td>
+        <td><iframe src="https://code-lab.app/program/5f308b69-7486-43ab-9f64-6a81d16fb1dd/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe></td>
     </table>
 </body>
 </html>
