--- a/javascript.html
+++ b/javascript.html
@@ -42,6 +42,7 @@
     <br>
     <table>
         <td><iframe src="https://code-lab.app/program/480ebbd4-c97f-46ce-abad-bb334f11cedd/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe></td>
+        <td><iframe src="https://code-lab.app/program/851bdf80-c58e-4217-a235-802c18aa9a37/embed" style="min-height: 500px; min-width: 400px; border: none; "></iframe></td>
     </table>
 </body>
 </html>
